
	* include/Rcpp/modules/Module_generated_Pointer_method.h: added code to deal
	with const free "methods", e.g. OUT foo( const Class*, ...) in modules
	Before const_method could only deal with actual const methods of the class,
	e.g. OUT Class::foo( ... ) const 
	* include/Rcpp/modules/Module_generated_Pointer_CppMethod.h: idem
	* include/Rcpp/as.h: deal with as<int64_t> and as<uint64_t>

2011-10-31  Romain Francois  <romain@r-enthusiasts.com>

	* include/Rcpp/int64/int64_lite.h: handling int64_t and uint64_t types, 
	based on the int64 package
	* include/Rcpp/internal/wrap.h: new dispatch layers to handle int64_t, 
	uint64_t and containers of these
	* DESCRIPTION: new depending on int64

2011-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/iostream/Rostream.h (Rcpp): Added tentative patch
	for operator<< also contributed by Jelmer Ypma -- but kept commented
	out for now

2011-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/Rostream.cpp: Patch by Jelmer Ypma which adds a new device
	'Rcout' not unlike std::cout but uses Rprintf internally
	* src/Rstreambuf.cpp: Idem
	* include/include/Rcpp/iostream/Rostream.h: Idem
	* include/include/Rcpp/iostream/Rstreambuf.h: Idem
	* include/include/Rcpp.h:  Include new headers

	* inst/unitTests/runit.rcout.R: Added simple unit test

2011-09-29  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.7
        * inst/NEWS: Release 0.9.7
        * inst/include/Rcpp/config.h: Release 0.9.7
        * debian/*: Similarly updated for new release to Debian

	* inst/include/Rcpp/sugar/block/SugarBlock_1.h: Apply second path by
	Martyn Plummer to permit compilation on Solaris
	* inst/include/Rcpp/sugar/block/SugarBlock_2.h: Idem
	* inst/include/Rcpp/sugar/block/SugarBlock_3.h: Idem
	* inst/include/Rcpp/sugar/matrix/outer.h: Idem
	* inst/include/Rcpp/vector/LazyVector.h: Idem
	* inst/unitTests/testRcppModule/src/stdVector.cpp: Idem

2011-09-24  Dirk Eddelbuettel  <edd@debian.org>
